--- a/protobuf-json-gen/protobuf-json-gen.csproj
+++ b/protobuf-json-gen/protobuf-json-gen.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>Plaisted.ProtobufJsonGen</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.4.1" />
+  </ItemGroup>
 
 </Project>
